--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "rimraf ./dist && tsc -p tsconfig.json"
+    "build": "rimraf ./dist && tsc -p tsconfig.json",
+    "build:docker": "npm run build && docker build . --tag node/express-app:latest"
   },
   "author": "Angelo Zambrano <angelozam17@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "morgan": "^1.10.0"
   },
